# AND-2025

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: defaults.yaml  eval.yaml
configs/dataset/: cifar10.yaml  stl10.yaml  tinyimagenet.yaml
configs/train/: and.yaml  and_autok.yaml  and_vit.yaml
outputs/2025-09-25/02-11-33/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: ablate_backbones.sh  sweep_autok_silhouette.sh  sweep_dpmeans.sh
src/: build_features.py  eval.py  hydra_main.py  train.py
src/andx/: logging.py  seed.py
src/andx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/andx/auto_k/: consensus.py  dp_means.py  eigengap.py  silhouette.py  stability.py  xmeans_gmeans.py
src/andx/data/: datamodules.py  transforms.py
src/andx/knn_eval/: knn.py  linear_probe.py
src/andx/losses/: and_loss.py
src/andx/metrics/: clustering_scores.py
src/andx/models/: model_and.py
src/andx/models/backbones/: resnet.py  vision_backbones.py
src/andx/models/heads/: autok_head.py
src/andx/utils/: memory.py
test/: test_autok.py  test_forward.py  test_metrics.py
